--- a/Css/imitatefirst.css
+++ b/Css/imitatefirst.css
@@ -95,7 +95,7 @@
     .rightcontainer{
         width: 50%;
         /* background-color:#93b8d4; */
-        background-color:#AFD6F4;
+        background-color:#93b8d4;
         height: 100vh;
         position: fixed;
         right: 0px;
